--- a/index.html
+++ b/index.html
@@ -2,65 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- viewport-fit=cover обязателен для работы с челкой и системными полосами -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>GP Player Pro</title>
+    <title>GP Player</title>
     
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.3.0/dist/alphaTab.js"></script>
 
     <style>
         :root {
-            --bg-color: #ffffff;
-            --text-color: #222222;
-            --tg-button: var(--tg-theme-button-color, #2481cc);
-            --tg-button-text: var(--tg-theme-button-text-color, #ffffff);
-            --toolbar-bg: #f0f0f0;
+            --bg: #ffffff;
+            --text: #222222;
+            --btn: #2481cc;
+            --btn-txt: #ffffff;
+            --bar: #f0f0f0;
         }
 
-        body.dark-mode {
-            --bg-color: #1a1a1a;
-            --text-color: #ffffff;
-            --toolbar-bg: #333333;
+        body.dark {
+            --bg: #1a1a1a;
+            --text: #ffffff;
+            --bar: #333333;
+        }
+
+        html, body {
+            margin: 0; padding: 0;
+            width: 100%; height: 100%;
+            overflow: hidden;
+            background: var(--bg);
+            color: var(--text);
+            font-family: sans-serif;
         }
 
         body {
-            margin: 0; padding: 0;
-            background: var(--bg-color);
-            color: var(--text-color);
-            font-family: -apple-system, sans-serif;
-            display: flex; flex-direction: column;
-            /* Используем динамические единицы высоты (dvh) для мобильных браузеров */
-            height: 100dvh; 
-            width: 100vw;
-            overflow: hidden;
+            display: flex;
+            flex-direction: column;
         }
 
         .toolbar {
-            background: var(--toolbar-bg);
+            background: var(--bar);
             padding: 10px;
-            padding-top: calc(10px + var(--tg-safe-area-inset-top, 0px)); /* Отступ под челку */
-            display: flex; gap: 8px;
+            padding-top: calc(10px + var(--tg-safe-area-inset-top, 0px));
+            display: flex;
+            gap: 8px;
             border-bottom: 1px solid rgba(0,0,0,0.1);
-            flex-wrap: wrap;
+            z-index: 10;
         }
 
         button, select {
-            font-size: 14px; padding: 8px 12px; border-radius: 8px;
-            border: none; background: var(--tg-button);
-            color: var(--tg-button-text); font-weight: bold;
+            font-size: 14px;
+            padding: 10px 12px;
+            border-radius: 8px;
+            border: none;
+            background: var(--btn);
+            color: var(--btn-txt);
+            font-weight: bold;
+            cursor: pointer;
         }
 
         #alphaTab-container {
-            flex: 1; overflow: auto;
-            background: var(--bg-color);
-            padding-bottom: var(--tg-safe-area-inset-bottom, 0px); /* Отступ снизу */
+            flex: 1;
+            overflow: auto;
+            -webkit-overflow-scrolling: touch;
         }
+
+        #fileInput { display: none; }
     </style>
 </head>
 <body>
+
     <div class="toolbar">
-        <button onclick="document.getElementById('fileInput').click()">📁 Open</button>
+        <button id="btnOpen">📁 Open</button>
         <button id="btnPlay">▶ Play</button>
         <button id="btnTheme">🌓 Theme</button>
         <select id="trackSelector"><option>No file</option></select>
@@ -70,33 +80,14 @@
         <div id="alphaTab"></div>
     </div>
 
-    <input type="file" id="fileInput" accept=".gp,.gp3,.gp4,.gp5,.gpx" style="display:none">
+    <input type="file" id="fileInput" accept=".gp,.gp3,.gp4,.gp5,.gpx">
 
     <script>
         const tg = window.Telegram.WebApp;
+        tg.ready();
+        tg.expand();
 
-        // Функция для жесткой активации полноэкранного режима
-        function activateFullscreen() {
-            tg.ready();
-            tg.expand(); // Старый метод (раскрывает шторку до верха)
-            
-            // НОВЫЙ МЕТОД 2025 года (Fullscreen API)
-            if (tg.requestFullscreen) {
-                tg.requestFullscreen();
-            }
-        }
-
-        // Запускаем при загрузке
-        activateFullscreen();
-
-        // Также пробуем запустить при первом клике (некоторые системы требуют клика)
-        document.body.addEventListener('click', () => {
-            if (!tg.isExpanded) activateFullscreen();
-        }, { once: true });
-
-        // Настройка AlphaTab и темы
         const el = document.querySelector('#alphaTab');
-        let isDarkMode = false;
         const api = new alphaTab.AlphaTabApi(el, {
             player: {
                 enablePlayer: true,
@@ -104,22 +95,26 @@
             }
         });
 
-        document.getElementById('btnTheme').onclick = () => {
-            isDarkMode = !isDarkMode;
-            document.body.classList.toggle('dark-mode', isDarkMode);
-            api.settings.display.resources.mainColor = isDarkMode ? '#ffffff' : '#000000';
-            api.settings.display.staveRenderingConfig.staveColor = isDarkMode ? '#ffffff' : '#000000';
-            api.updateSettings();
-            api.render();
-        };
+        document.getElementById('btnOpen').onclick = () => document.getElementById('fileInput').click();
 
-        const fileInput = document.getElementById('fileInput');
-        fileInput.onchange = (e) => {
+        document.getElementById('fileInput').onchange = (e) => {
             const file = e.target.files[0];
             if (!file) return;
             const reader = new FileReader();
-            reader.onload = (res) => api.load(new Uint8Array(res.target.result));
+            reader.onload = (res) => {
+                api.load(new Uint8Array(res.target.result));
+            };
             reader.readAsArrayBuffer(file);
+        };
+
+        let isDark = false;
+        document.getElementById('btnTheme').onclick = () => {
+            isDark = !isDark;
+            document.body.classList.toggle('dark', isDark);
+            api.settings.display.resources.mainColor = isDark ? '#ffffff' : '#000000';
+            api.settings.display.staveRenderingConfig.staveColor = isDark ? '#ffffff' : '#000000';
+            api.updateSettings();
+            api.render();
         };
 
         api.scoreLoaded.on((score) => {
@@ -127,15 +122,17 @@
             ts.innerHTML = '';
             score.tracks.forEach((track, index) => {
                 const opt = document.createElement('option');
-                opt.value = index; opt.innerText = track.name;
+                opt.value = index;
+                opt.innerText = track.name;
                 ts.appendChild(opt);
             });
             api.renderTracks([score.tracks[0]]);
         });
 
         document.getElementById('btnPlay').onclick = () => api.playPause();
+
+        window.addEventListener('resize', () => api.render());
     </script>
 </body>
 </html>
-
 
