--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         .btn-main:active { opacity: 0.7; }
         .btn-main span:last-child { font-size: 10px; text-transform: uppercase; }
         @media (orientation: landscape) { .controls { padding: 5px; gap: 30px; } .btn-main { min-width: 60px; padding: 5px; } .btn-main span:last-child { display: none; } .header { padding: 5px; padding-top: 5px; } }
-        
         #loading { position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: #ffffff; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 1000; text-align: center; padding: 20px; }
         .metronome-active { background: #e74c3c !important; }
         .at-cursor-bar { fill: rgba(36, 129, 204, 0.15); }
@@ -28,8 +27,8 @@
 
     <div id="loading">
         <div style="font-size: 40px; margin-bottom: 20px;">🎸</div>
-        <div id="status">Initializing...</div>
-        <button id="skipLoading" style="display:none; margin-top: 20px; padding: 10px; border-radius: 8px; border: 1px solid #ccc; background: #eee;">Skip Loading</button>
+        <div id="status">Connecting to Sound Engine...</div>
+        <button id="skipLoading" style="display:none; margin-top: 20px; padding: 10px; border-radius: 8px; border: 1px solid #ccc; background: #eee;">Enter Player Anyway</button>
     </div>
 
     <div class="header">
@@ -65,11 +64,11 @@
         let lastBar = -1;
         let metroOn = false;
 
-        // Force hide loader after 12 seconds as a safety measure
+        // Increased safety timeout to 30 seconds for mobile connections
         const safetyTimeout = setTimeout(() => {
-            status.innerText = "Taking too long? Check if sonivox.sf2 is in your repo.";
+            status.innerText = "Connection is slow. You can enter, but sounds might still be loading.";
             skipBtn.style.display = 'block';
-        }, 12000);
+        }, 30000);
 
         skipBtn.onclick = () => loader.style.display = 'none';
 
@@ -79,7 +78,8 @@
                 enablePlayer: true, 
                 enableMetronome: true, 
                 enableCursor: true,
-                soundFont: './sonivox.sf2' 
+                // USE FULL ABSOLUTE URL FOR BETTER COMPATIBILITY
+                soundFont: 'https://realist59.github.io/TG_GuitarPro/sonivox.sf2' 
             },
             display: { layoutMode: 'page' }
         });
@@ -108,14 +108,12 @@
             setTimeout(hideLoader, 600);
         });
 
-        // Fallback if local file fails
-        setTimeout(() => {
-            if(loader.style.display !== 'none' && status.innerText === 'Initializing...') {
-                status.innerText = "Local soundfont not found. Trying backup...";
-                api.settings.player.soundFont = 'https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.7.1/dist/soundfont/sonivox.sf2';
-                api.updateSettings();
-            }
-        }, 5000);
+        // Backup plan: if local absolute link fails, try CDN
+        api.soundFontLoadFailed.on(() => {
+            status.innerText = "Retrying from global server...";
+            api.settings.player.soundFont = 'https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.7.1/dist/soundfont/sonivox.sf2';
+            api.updateSettings();
+        });
 
         document.getElementById('fileInput').onchange = (e) => {
             const f = e.target.files[0]; if(!f) return;
@@ -169,7 +167,6 @@
     </script>
 </body>
 </html>
-
 
 
 
