--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>GP Pro Player Fixed</title>
+    <title>GP Pro Player</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.7.1/dist/alphaTab.js"></script>
     <style>
         :root {
-            --bg: #0b0b0b;
-            --bar-bg: rgba(20, 20, 20, 0.98);
+            --bg: #000000;
+            --bar-bg: rgba(20, 20, 20, 0.95);
             --text: #ffffff;
             --accent: #2481cc;
         }
@@ -17,132 +17,142 @@
         html, body {
             margin: 0; padding: 0; width: 100%; height: 100dvh;
             overflow: hidden; background: var(--bg); color: var(--text);
-            font-family: -apple-system, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
 
         #loading {
             position: fixed; inset: 0; background: var(--bg);
             display: flex; flex-direction: column; align-items: center; justify-content: center;
-            z-index: 1000; text-align: center; padding: 20px;
+            z-index: 1000; text-align: center;
         }
 
         #progress-wrap {
-            width: 80%; max-width: 300px; height: 8px; background: #222; 
-            border-radius: 4px; margin: 20px 0; overflow: hidden; display: none;
+            width: 220px; height: 6px; background: #222; 
+            border-radius: 3px; margin: 20px 0 10px 0; overflow: hidden;
+            display: none; border: 1px solid #333;
         }
-        #progress-fill { width: 0%; height: 100%; background: var(--accent); transition: width 0.2s; }
+        #progress-fill { width: 0%; height: 100%; background: var(--accent); transition: width 0.2s linear; }
 
-        .measure-bar {
-            height: 4px; background: #222; display: flex; width: 100%;
+        .header {
+            height: 50px; background: var(--bar-bg); display: flex; 
+            align-items: center; justify-content: space-between; padding: 0 15px;
+            border-bottom: 1px solid #222;
         }
-        .measure-progress { height: 100%; background: var(--accent); width: 0%; transition: width 0.3s; }
 
-        #tab-view { flex: 1; overflow: auto; background: #fff; }
-        #alphaTab-fretboard { height: 100px; background: #1a1a1a; display: none; }
-
-        @media (orientation: portrait) {
-            body { display: flex; flex-direction: column; }
-            .header { height: 60px; display: flex; align-items: center; justify-content: space-between; padding: 0 15px; background: var(--bar-bg); }
-            .footer { padding: 15px; background: var(--bar-bg); padding-bottom: calc(15px + var(--tg-safe-area-inset-bottom, 0px)); }
+        #tab-view { 
+            flex: 1; overflow: auto; background: #fff; position: relative;
+            -webkit-overflow-scrolling: touch;
         }
+
+        #alphaTab-fretboard { height: 100px; background: #1a1a1a; border-top: 1px solid #333; display: none; }
+
+        .footer { 
+            background: var(--bar-bg); padding: 10px 15px; 
+            padding-bottom: calc(10px + var(--tg-safe-area-inset-bottom, 0px));
+        }
+
+        .controls-main { display: flex; justify-content: space-around; align-items: center; }
+
+        .icon-btn { 
+            background: none; border: none; color: var(--text); 
+            font-size: 24px; cursor: pointer; padding: 8px; border-radius: 8px; 
+        }
+        .icon-btn:active { opacity: 0.6; color: var(--accent); }
+
+        body { display: flex; flex-direction: column; }
 
         @media (orientation: landscape) {
-            body { display: grid; grid-template-columns: 60px 1fr; grid-template-rows: 1fr 100px; }
-            .header { grid-column: 1; grid-row: 1/3; flex-direction: column; display: flex; padding: 10px 0; background: var(--bar-bg); border-right: 1px solid #333; }
-            #tab-view { grid-column: 2; grid-row: 1; }
-            #alphaTab-fretboard { grid-column: 2; grid-row: 2; }
-            .footer { display: none; }
+            #alphaTab-fretboard { height: 80px; }
         }
 
-        .icon-btn { background: rgba(255,255,255,0.1); border: none; color: #fff; padding: 10px; border-radius: 8px; cursor: pointer; }
-        .play-btn { background: var(--accent); width: 60px; height: 60px; border-radius: 50%; font-size: 24px; }
+        #fileInput { display: none; }
     </style>
 </head>
 <body>
 
     <div id="loading">
-        <div style="font-size: 40px; margin-bottom: 10px;">🎸</div>
-        <div id="status">Ready to Rock?</div>
+        <div style="font-size: 50px;">🎸</div>
+        <div id="status">INITIALIZING...</div>
         <div id="progress-wrap"><div id="progress-fill"></div></div>
-        <button id="startBtn" onclick="initApp()" style="padding: 12px 30px; border-radius: 20px; border:none; background: var(--accent); color: white; font-weight: bold;">START PLAYER</button>
-        <div id="error-log" style="font-size: 10px; color: #666; margin-top: 15px;"></div>
+        <button id="startBtn" onclick="downloadAndInit()" style="margin-top:20px; padding:12px 35px; border-radius:25px; border:none; background:var(--accent); color:#fff; font-weight:bold; cursor:pointer;">START APP</button>
     </div>
 
     <div class="header">
         <button class="icon-btn" onclick="openFile()">📁</button>
-        <button class="icon-btn" onclick="toggleFretboard()">🎸</button>
-        <button class="icon-btn" onclick="toggleMetro()">⏳</button>
-    </div>
-
-    <div id="tab-view"><div id="alphaTab"></div></div>
-    <div id="alphaTab-fretboard"></div>
-
-    <div class="footer">
-        <div style="display: flex; align-items: center; justify-content: center; gap: 20px;">
-            <input type="range" id="tempoRange" min="0.25" max="2" step="0.1" value="1" style="width: 100px;">
-            <button class="icon-btn play-btn" id="playBtn" onclick="handlePlay()">▶</button>
-            <div id="tempoDisplay">1.0x</div>
+        <select id="trackList" style="background:none; border:none; color:#fff; font-weight:bold; max-width: 150px;"></select>
+        <div style="display:flex; gap:10px;">
+            <button class="icon-btn" onclick="toggleFretboard()">🎸</button>
+            <button class="icon-btn" id="metroBtn" onclick="toggleMetro()">⏳</button>
         </div>
     </div>
 
-    <input type="file" id="fileInput" accept=".gp,.gp3,.gp4,.gp5,.gpx" style="display:none">
+    <div id="tab-view">
+        <div id="alphaTab"></div>
+    </div>
+
+    <div id="alphaTab-fretboard"></div>
+
+    <div class="footer">
+        <div class="controls-main">
+            <input type="range" id="tempoRange" min="0.25" max="2" step="0.1" value="1" style="width: 80px;">
+            <button class="icon-btn" id="playBtn" onclick="handlePlay()" style="font-size: 40px;">▶</button>
+            <div id="tempoText" style="font-size: 12px; min-width: 40px;">1.0x</div>
+        </div>
+    </div>
+
+    <input type="file" id="fileInput" accept=".gp,.gp3,.gp4,.gp5,.gpx">
 
     <script>
         const tg = window.Telegram.WebApp;
         tg.ready();
         tg.expand();
 
+        const el = document.querySelector('#alphaTab');
+        const fretEl = document.querySelector('#alphaTab-fretboard');
+        const status = document.getElementById('status');
+        const progressFill = document.getElementById('progress-fill');
+        const loader = document.getElementById('loading');
+        
         let api = null;
         let isMetro = false;
-        // Запасной URL для звуков
-        const sf2Url = 'https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.7.1/dist/soundfont/sonivox.sf2';
+        const soundfontUrl = 'https://cdn.jsdelivr.net/npm/@coderline/alphatab@1.7.1/dist/soundfont/sonivox.sf2';
 
-        async function initApp() {
+        async function downloadAndInit() {
             document.getElementById('startBtn').style.display = 'none';
             document.getElementById('progress-wrap').style.display = 'block';
-            const status = document.getElementById('status');
-            const fill = document.getElementById('progress-fill');
-
-            status.innerText = "Loading Engine...";
+            status.innerText = "LOADING ENGINE...";
 
             try {
-                api = new alphaTab.AlphaTabApi(document.querySelector('#alphaTab'), {
-                    player: {
-                        enablePlayer: true,
-                        soundFont: sf2Url,
-                        enableCursor: true
+                api = new alphaTab.AlphaTabApi(el, {
+                    player: { 
+                        enablePlayer: true, 
+                        enableCursor: true, 
+                        soundFont: soundfontUrl 
                     },
-                    display: { layoutMode: 'fluid', upscale: 2 }
+                    display: { 
+                        layoutMode: 'fluid', 
+                        upscale: 2 
+                    }
                 });
 
-                // Визуальный гриф
-                new alphaTab.gui.backings.Fretboard(document.querySelector('#alphaTab-fretboard'), api);
+                new alphaTab.gui.backings.Fretboard(fretEl, api);
 
                 api.soundFontLoadStatus.on((args) => {
                     const p = Math.floor((args.loaded / args.total) * 100);
-                    fill.style.width = p + '%';
-                    status.innerText = `Loading Sounds: ${p}%`;
+                    progressFill.style.width = p + '%';
+                    status.innerText = `SOUNDS: ${p}%`;
                 });
 
                 api.soundFontLoaded.on(() => {
-                    status.innerText = "Complete!";
-                    setTimeout(() => document.getElementById('loading').style.display = 'none', 500);
+                    status.innerText = "READY";
+                    setTimeout(() => { loader.style.display = 'none'; }, 500);
                 });
-
-                // Если загрузка звуков зависнет на 15 секунд - пускаем так
-                setTimeout(() => {
-                    if(document.getElementById('loading').style.display !== 'none') {
-                        document.getElementById('loading').style.display = 'none';
-                        console.warn("Soundfont timeout - starting without sound");
-                    }
-                }, 15000);
 
                 setupEvents();
 
-            } catch (err) {
-                document.getElementById('error-log').innerText = err.message;
-                status.innerText = "Offline Mode Enabled";
-                setTimeout(() => document.getElementById('loading').style.display = 'none', 2000);
+            } catch (e) {
+                status.innerText = "LOAD ERROR";
+                console.error(e);
             }
         }
 
@@ -154,6 +164,17 @@
         }
 
         function setupEvents() {
+            api.scoreLoaded.on((s) => {
+                const tl = document.getElementById('trackList');
+                tl.innerHTML = '';
+                s.tracks.forEach((t, i) => {
+                    const o = document.createElement('option');
+                    o.value = i; o.innerText = t.name || `Track ${i+1}`;
+                    tl.appendChild(o);
+                });
+                api.renderTracks([s.tracks[0]]);
+            });
+
             api.playerStateChanged.on(() => {
                 document.getElementById('playBtn').innerText = api.playerState === 1 ? "⏸" : "▶";
             });
@@ -161,32 +182,58 @@
             document.getElementById('tempoRange').oninput = (e) => {
                 const val = parseFloat(e.target.value);
                 api.playbackSpeed = val;
-                document.getElementById('tempoDisplay').innerText = val.toFixed(1) + 'x';
+                document.getElementById('tempoText').innerText = `${val.toFixed(1)}x`;
+            };
+
+            document.getElementById('trackList').onchange = (e) => {
+                api.renderTracks([api.score.tracks[parseInt(e.target.value)]]);
             };
         }
 
         function openFile() {
             const input = document.getElementById('fileInput');
-            input.onchange = (e) => {
+            input.value = ''; 
+            input.onchange = async (e) => {
                 const file = e.target.files[0];
-                if (file) api.load(file);
+                if (!file) return;
+
+                loader.style.display = 'flex';
+                status.innerText = "LOADING FILE...";
+
+                try {
+                    const buffer = await file.arrayBuffer();
+                    const data = new Uint8Array(buffer);
+                    api.load(data);
+                    
+                    api.renderFinished.on(() => {
+                        setTimeout(() => {
+                            loader.style.display = 'none';
+                            api.render(); 
+                        }, 150);
+                    }, { once: true });
+
+                } catch (err) {
+                    status.innerText = "FILE ERROR";
+                    setTimeout(() => { loader.style.display = 'none'; }, 2000);
+                }
             };
             input.click();
-        }
-
-        function toggleFretboard() {
-            const fb = document.getElementById('alphaTab-fretboard');
-            fb.style.display = fb.style.display === 'block' ? 'none' : 'block';
-            api.render();
         }
 
         function toggleMetro() {
             isMetro = !isMetro;
             api.settings.player.metronomeVolume = isMetro ? 1 : 0;
             api.updateSettings();
-            tg.HapticFeedback.impactOccurred('light');
+            document.getElementById('metroBtn').style.color = isMetro ? 'var(--accent)' : '#fff';
+            if(tg.HapticFeedback) tg.HapticFeedback.impactOccurred('medium');
+        }
+
+        function toggleFretboard() {
+            fretEl.style.display = fretEl.style.display === 'block' ? 'none' : 'block';
+            api.render();
         }
     </script>
 </body>
 </html>
+
 
